--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,12 @@
-site_name: My Docs
+site_name: PyPOSIX
 theme:
-  name: gitbook
+  name: ivory
+
+nav:
+    - Home: index.md
+    - Template: template.md
+
+
+markdown_extensions: 
+    - fenced_code
+
